app/assets/stylesheets/new_styles/_tags.scss
#tag-info {
  #tag-leaders{
    margin-bottom:50px;
    white-space: nowrap;
    overflow:hidden;

    .leader {
      position:relative;
      display:inline-block;
      height:133px;
      width:133px;
      margin-right:6px;

      background : {
        position : center;
        size: cover;
        image : image-url('user/default.png');
      }

      a {
        width: 100%;
        height: 100%;
        display: block;
        position: absolute;

        &:hover {
          span {
            background-color: rgba(0,0,0,.9);
          }
        }
      }

      span {
        @include transition(background-color);
        position: absolute;
        box-sizing:border-box;
        bottom: 0;
        left:0;
        color: white;
        width: 100%;
        padding: 5px 10px;
        padding-top: 8px;
        background-color: rgba(0,0,0,.4);

        text-transform: uppercase;
        font-family: Roboto-Bold;
      }
    }
  }

  #tag-participants {
    margin: 10px 0;
    border-top: 1px solid gray;
    border-bottom: 1px solid gray;
    padding: 10px;
    width: 100%;
    text-align: center;
    img {
      vertical-align: text-bottom;
    }
  }

  .tag-row {
    display: inline-block;
    margin-right: 10px;
  }
}

/* topics index */

.topics {
  margin-left:-50px;
}

.topic {
  position:relative;
  display: inline-block;

  height:180px;
  width:150px;

  margin-bottom:50px;
  margin-left:50px;

  a {
    position:absolute;
    height:100%;
    width:100%;
    color:inherit;

    &:hover {
      .topic-title {
        text-decoration:underline;
      }
    }
  }

  .topic-info {
    position:absolute;
    top:160px;
    width:100%;
    text-align:center;
    text-transform:capitalize;

    .topic-title {
      font-family:Roboto-Bold;
    }

    .topic-vitals {
      color:#999;
    }
  }

  .topic-image {
    position:absolute;

    @include box-shadow(0,1px,3px,rgba(0,0,0,.5));

    height:150px;
    width:150px;

    background : {
      position:center;
      size:cover;
    }

    & {
      z-index:1;
      margin-left:-10px;
      margin-top:-5px;
      -webkit-transform:rotate(-5deg);
      -moz-transform:rotate(-5deg);
    }

    &:first-child {
      z-index:3;
      margin:0;
      -webkit-transform:rotate(0deg);
      -moz-transform:rotate(0deg);
    }

    &:nth-child(2) {
      z-index:0;
      margin-left:10px;
      margin-top:-5px;
      -webkit-transform:rotate(5deg);
      -moz-transform:rotate(5deg);
    }
  }
}

